--- a/CC-CEDICT.WindowsPhone.csproj
+++ b/CC-CEDICT.WindowsPhone.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Chinese.cs" />
     <Compile Include="Dictionary.cs" />
     <Compile Include="ILine.cs" />
+    <Compile Include="IndexRecord.cs" />
     <Compile Include="StreamLineArray.cs" />
     <Compile Include="Indexer.cs" />
     <Compile Include="Pinyin.cs" />
