--- a/CC-CEDICT.WindowsPhone.csproj
+++ b/CC-CEDICT.WindowsPhone.csproj
@@ -57,7 +57,7 @@
     <Compile Include="StreamLineArray.cs" />
     <Compile Include="Indexer.cs" />
     <Compile Include="Pinyin.cs" />
-    <Compile Include="PinyinIndex.cs" />
+    <Compile Include="Index.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
   </ItemGroup>
