--- a/CC-CEDICT.WindowsPhone.csproj
+++ b/CC-CEDICT.WindowsPhone.csproj
@@ -54,12 +54,12 @@
     <Compile Include="Dictionary.cs" />
     <Compile Include="ILine.cs" />
     <Compile Include="IndexRecord.cs" />
+    <Compile Include="Searcher.cs" />
     <Compile Include="StreamLineArray.cs" />
-    <Compile Include="Indexer.cs" />
     <Compile Include="Pinyin.cs" />
     <Compile Include="Index.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Record.cs" />
+    <Compile Include="DictionaryRecord.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.$(TargetFrameworkProfile).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\Silverlight for Phone\$(TargetFrameworkVersion)\Microsoft.Silverlight.CSharp.targets" />
