--- a/CC-CEDICT.WindowsPhone.csproj
+++ b/CC-CEDICT.WindowsPhone.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Dictionary.cs" />
     <Compile Include="ILine.cs" />
     <Compile Include="IndexRecord.cs" />
+    <Compile Include="IndexReference.cs" />
     <Compile Include="Searcher.cs" />
     <Compile Include="SearchResultAggregator.cs" />
     <Compile Include="StreamLineArray.cs" />
